Visibility fix on smaller screens

--- a/src/assets/scss/components/_step-2.scss
+++ b/src/assets/scss/components/_step-2.scss
@@ -1,6 +1,5 @@
 .step-2 {
   &__wrapper {
     margin-top: 60px;
-    padding-bottom: 130px;
   }
 }
